[gd_scene load_steps=3 format=2]

[ext_resource path="res://Ahmed/Scenes/Elements/ItemName.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 5 )

[node name="Item Name" type="Area2D"]
collision_layer = 4
script = ExtResource( 1 )

[node name="ItemName" type="Label" parent="."]
margin_left = -47.0
margin_top = -15.0
margin_right = 48.0
margin_bottom = -1.0
text = "Pick Up Item X"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.5, 19.5 )
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[connection signal="body_entered" from="." to="." method="_on_Item_Name_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Item_Name_body_exited"]
